feat: style layout products changed

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,12 +9,12 @@
     overflow-x: hidden;
 }
 
-body{
+body {
     background-color: #ffffff;
     font-family: 'Sofia Sans Condensed', sans-serif;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,23 +25,23 @@ header{
     box-shadow: 1px 1px 10px 0.1px #0000006e;
 }
 
-.header-menu{
+.header-menu {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1.5em;
 }
 
-.header-logo{
+.header-logo {
     width: 10%;
 }
 
-.header-logo img{
+.header-logo img {
     width: 100%;
     height: auto;
 }
 
-.header-link{
+.header-link {
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 400;
@@ -48,7 +49,7 @@ header{
     transition: 0.2s;
 }
 
-.header-link:hover{
+.header-link:hover {
     transform: translateY(-7%);
     text-shadow: 0.5px 0.5px 0.5px #ffffff;
 }
@@ -67,14 +68,14 @@ form {
     position: relative;
     border-radius: 10em;
 }
-  
+
 form label {
     display: flex;
     align-items: center;
     width: 100%;
     height: var(--height);
 }
-  
+
 form input {
     width: 100%;
     padding-inline-start: calc(var(--padding) + var(--gap));
@@ -85,15 +86,15 @@ form input {
 
 form svg {
     color: #111;
-    transition: 0.3s cubic-bezier(.4,0,.2,1);
+    transition: 0.3s cubic-bezier(.4, 0, .2, 1);
     position: absolute;
     height: 15px;
 }
-  
+
 .icon {
     position: absolute;
     left: var(--padding);
-    transition: 0.3s cubic-bezier(.4,0,.2,1);
+    transition: 0.3s cubic-bezier(.4, 0, .2, 1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,7 +105,7 @@ form svg {
     opacity: 0;
     visibility: hidden;
 }
-  
+
 .close-btn {
     background: none;
     border: none;
@@ -123,46 +124,46 @@ form svg {
     transform: scale(0);
     visibility: hidden;
 }
-  
-form input:focus ~ .icon {
+
+form input:focus~.icon {
     transform: rotate(var(--rotate)) scale(1.3);
 }
-  
-form input:focus ~ .icon .swap-off {
+
+form input:focus~.icon .swap-off {
     opacity: 1;
     transform: rotate(-80deg);
     visibility: visible;
     color: var(--icon-change-color);
 }
-  
-form input:focus ~ .icon .swap-on {
+
+form input:focus~.icon .swap-on {
     opacity: 0;
     visibility: visible;
 }
-  
-form input:valid ~ .icon {
+
+form input:valid~.icon {
     transform: scale(1.3) rotate(var(--rotate))
 }
-  
-form input:valid ~ .icon .swap-off {
+
+form input:valid~.icon .swap-off {
     opacity: 1;
     visibility: visible;
     color: var(--icon-change-color);
 }
-  
-form input:valid ~ .icon .swap-on {
+
+form input:valid~.icon .swap-on {
     opacity: 0;
     visibility: visible;
 }
-  
-form input:valid ~ .close-btn {
+
+form input:valid~.close-btn {
     opacity: 1;
     visibility: visible;
     transform: scale(1);
     transition: 0s;
 }
-  
-main{
+
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -172,85 +173,102 @@ main{
     background-color: #ffffff;
 }
 
-main h1{
+main h1 {
     font-size: 2.6rem;
     font-weight: 200;
     color: #000;
 }
 
-.division{
+.division {
     width: 90%;
     height: 1px;
     background-color: #000;
 }
 
-.container-item{
+.container-item {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 5% 0% 5% 0%;
+    padding: 3% 0% 5% 0%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica     Neue', sans-serif;
     gap: 2em;
 }
 
-.container-item img{
+.container-item img {
     width: 100%;
     height: auto;
     border-radius: 0.4em;
 }
 
-.item{
-    width: 24%;
+.item {
+    width: 30rem;
     height: auto;
     background: #ffffff;
     border: 2px solid #3b3636;
     box-shadow: 4px 4px #000;
     border-radius: 5px;
-    padding: 20px;
+    padding: 1rem;
+    margin: 1rem;
     gap: 10px;
 }
 
-.item-content{
+.item-content {
     display: flex;
-    align-items: center;
-    padding-right: 10%;
-    padding-top: 2%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 2rem;
+    padding: 0.5rem;
 }
 
-.item-content strong{
-    font-size: 1.3rem;
+.item-price {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.item-price p{
+    font-family: "Lexend", sans-serif;
+    font-size: 1rem;
+    font-weight: 300;
+    color: #0b0b0b;
+}
+
+.item-price span {
+    display: flex;
+    align-items: center;
+    font-family: "Lexend", sans-serif;
+    font-weight: 600;
+    font-size: 0.9rem;
+    gap: 5rem;
 }
 
 .card-btn {
+    font-family: "Lexend", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
     overflow: hidden;
     cursor: pointer;
     height: 35px;
     border: 2px solid #000;
-    border-radius: 5px;
-    padding: 0 15px;
-    transition: all 0.3s;
-}
-  
-.card-btn svg {
-    width: 100%;
-    height: 100%;
-    fill: #000;
-    transition: all 0.3s;
-}
-  
-.card-btn:hover {
     background-color: #000;
+    color: #fff;
+    padding: 0 15px;
+    margin: 1% 1% 1% 0%;
+    transition: all 0.3s;
 }
-  
-.card-btn:hover svg {
-    fill: #fff;
+
+.card-btn:hover {
+    background-color: #fff;
+    color: #000;
 }
-  
+
 .card-btn:active {
-    transform: translateY(7%);
+    transform: translateY(0.1rem);
 }
-  
+
 footer {
     display: flex;
     justify-content: center;
@@ -263,18 +281,18 @@ footer {
     font-weight: 400;
 }
 
-footer p{
+footer p {
     text-align: center;
     width: 100%;
 }
 
-footer a{
+footer a {
     text-decoration: none;
     color: #fff;
     margin-left: 0.3%;
     font-weight: 500;
 }
 
-footer a:hover{
+footer a:hover {
     text-decoration: underline;
 }
