--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bahiana&display=swap');
 
 * {
     margin: 0;
@@ -23,6 +24,7 @@ header {
     width: 100%;
     padding: 1% 5% 1% 5%;
     box-shadow: 1px 1px 10px 0.1px #0000006e;
+    z-index: 9;
 }
 
 .header-menu {
@@ -168,21 +170,62 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 5%;
     gap: 2em;
     background-color: #ffffff;
+    margin-top: 5rem;
 }
 
-main h1 {
+.title-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-top: 1rem;    
+    margin-top: 2rem;
+}
+
+.title-main h1 {
     font-size: 2.6rem;
-    font-weight: 200;
+    font-weight: 300;
     color: #000;
 }
 
 .division {
     width: 90%;
-    height: 1px;
+    height: 1.3px;
     background-color: #000;
+}
+
+.banner-video{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+}
+
+.banner-video video {
+    width: 100%;
+    height: 43rem;
+    filter: brightness(70%);
+    object-fit: cover;
+    position: relative;
+}
+
+.title-banner-video{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+}
+
+.title-banner-video h1{
+    font-family: "Bahiana", sans-serif;
+    font-size: 5rem;
+    font-weight: 400;
+    color: #fff;
 }
 
 .container-item {
@@ -190,7 +233,7 @@ main h1 {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 3% 0% 5% 0%;
+    padding: 2% 0% 5% 0%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica     Neue', sans-serif;
     gap: 2em;
 }
@@ -229,7 +272,7 @@ main h1 {
     gap: 0.5rem;
 }
 
-.item-price p{
+.item-price p {
     font-family: "Lexend", sans-serif;
     font-size: 1rem;
     font-weight: 300;
