feat: create product button added and create product to database

--- a/src/index.css
+++ b/src/index.css
@@ -228,6 +228,10 @@ main {
     color: #fff;
 }
 
+.create-page{
+    border-radius: 0;
+}
+
 .container-item {
     display: flex;
     align-items: center;
