--- a/src/index.css
+++ b/src/index.css
@@ -344,6 +344,27 @@ button {
     gap: 2em;
 }
 
+.container-loader{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #0000006e;
+    backdrop-filter: blur(2px);
+    z-index: 9;
+}
+
+.loader{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    width: 100%;
+}
+
 .edit-container {
     display: flex;
     flex-direction: column;
