--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ body {
     font-family: 'Sofia Sans Condensed', sans-serif;
 }
 
+.hot-toaster{   
+    margin: 7rem 1rem 1rem 1rem;
+}
+
+.hot-toaster .go1579819456{
+    width: 100%;
+    overflow: hidden;
+}
+
 header {
     display: flex;
     align-items: center;
@@ -54,6 +63,33 @@ header {
 .header-link:hover {
     transform: translateY(-7%);
     text-shadow: 0.5px 0.5px 0.5px #ffffff;
+}
+
+.header-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    text-decoration: none;
+    color: #fff;
+}
+
+.header-login:hover {
+    text-decoration: underline;
+}
+
+.header-login svg {
+    border: 1px solid #fff;
+    border-radius: 10rem;
+    padding: 0.3rem;
+    width: 30%;
+    height: auto;
+}
+
+.header-login span {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #fff;
 }
 
 .hamburger {
@@ -131,6 +167,42 @@ header {
     height: 15px;
 }
 
+.search-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+.logado {
+    display: flex;
+    flex-direction: column;
+    width: 5rem;
+}
+
+.logado p {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #fff;
+}
+
+.logado button {
+    font-size: 1rem;
+    background-color: #fff;
+    padding: 1%;
+    border: 1px solid #fff;
+    color: #000;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.logado button:hover {
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+}
+
 .icon {
     position: absolute;
     left: var(--padding);
@@ -165,32 +237,7 @@ header {
     visibility: hidden;
 }
 
-.header-login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-    text-decoration: none;
-    color: #fff;
-}
 
-.header-login:hover{
-    text-decoration: underline;
-}
-
-.header-login svg{
-    border: 1px solid #fff;
-    border-radius: 10rem;
-    padding: 0.3rem;
-    width: 30%;
-    height: auto;
-}
-
-.header-login span{
-    font-size: 1rem;
-    font-weight: 400;
-    color: #fff;
-}
 
 form input:focus~.icon {
     transform: rotate(var(--rotate)) scale(1.3);
@@ -584,45 +631,11 @@ button {
     border: 1px solid #000;
 }
 
-.link-register{
+.link-register {
     text-decoration: underline;
     font-size: 1rem;
     font-weight: 500;
     color: #000;
-}
-
-.search-login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.8rem;
-}
-
-.logado{
-    display: flex;
-    flex-direction: column;
-}
-
-.logado p{
-    font-size: 1rem;
-    font-weight: 500;
-    color: #fff;
-}
-
-.logado button{
-    font-size: 1rem;
-    background-color: #fff;
-    padding: 1%;
-    border: 1px solid #fff;
-    color: #000;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
-.logado button:hover{
-    background-color: transparent;
-    border: 1px solid #fff;
-    color: #fff;
 }
 
 .button-input {
@@ -664,7 +677,8 @@ button {
     gap: 10px;
 }
 
-.cart-main, .empty-cart{
+.cart-main,
+.empty-cart {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -673,7 +687,7 @@ button {
     margin: 15rem 5rem 22rem 5rem
 }
 
-.button-homepage{
+.button-homepage {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -690,26 +704,26 @@ button {
     transition: 0.5s;
 }
 
-.button-homepage:hover{
+.button-homepage:hover {
     background-color: transparent;
     color: #000;
 }
 
-.empty-cart svg{
+.empty-cart svg {
     width: 2rem;
     height: auto;
 }
 
-.empty-cart svg path{
+.empty-cart svg path {
     fill: #fff;
     transition: 0.5s;
 }
 
-.button-homepage:hover .empty-cart svg path{
+.button-homepage:hover .empty-cart svg path {
     fill: #000;
 }
 
-.item-cart{
+.item-cart {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -719,26 +733,26 @@ button {
     gap: 1rem;
 }
 
-.info-products{
+.info-products {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
 }
 
-.info-products img{
+.info-products img {
     width: 5rem;
     height: 5rem;
     border: 1px solid #00000089
 }
 
-.button-remove{
+.button-remove {
     background-color: transparent;
     border: 0;
     cursor: pointer;
 }
 
-.button-remove svg{
+.button-remove svg {
     width: 1.4rem;
     height: auto;
 }
@@ -775,7 +789,7 @@ button {
     gap: 5rem;
 }
 
-.cart-link{
+.cart-link {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -784,12 +798,12 @@ button {
     padding: 1%;
 }
 
-.cart-link svg{
+.cart-link svg {
     width: 2rem;
     height: auto;
 }
 
-.cart-counter{
+.cart-counter {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -889,20 +903,20 @@ footer a:hover {
 
 @media screen and (max-width: 800px) {
 
-    main{
+    main {
         gap: 1rem;
         margin-top: 3rem;
     }
 
-    .header-logo{
+    .header-logo {
         width: 20%;
     }
 
-    .button-input{
+    .button-input {
         padding: 2%;
     }
 
-    .header-menu{
+    .header-menu {
         display: none;
         flex-direction: column;
         gap: 1rem;
@@ -912,12 +926,12 @@ footer a:hover {
         width: 80%;
     }
 
-    .hamburger{
+    .hamburger {
         display: flex;
         overflow: hidden;
     }
 
-    .item{
+    .item {
         width: 100%;
     }
 
