feat: changed toaster and register function

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .hot-toaster{   
-    margin: 7rem 1rem 1rem 1rem;
+    margin: 13rem 1rem 1rem 1rem;
 }
     
 .hot-toaster .go1579819456{
@@ -42,7 +42,7 @@ header{
 }
 
 .header-div{
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #ffffff7d;
 }
 
 .header-menu {
